--- a/src/app/client/acceuil-client/acceuil-client.component.scss
+++ b/src/app/client/acceuil-client/acceuil-client.component.scss
@@ -155,7 +155,7 @@ ul.labels-info li a i {
     border-radius: 4px 0 0 4px;
     box-shadow: none;
     color: #8a8a8a;
-    float: left;
+   // float: left;
     height: 40px;
     padding: 0 10px;
 }
@@ -167,6 +167,7 @@ ul.labels-info li a i {
     height: 40px;
     padding: 0 20px;
 }
+/*
 .table-inbox {
     border: 1px solid #d3d3d3;
     margin-bottom: 0;
@@ -364,6 +365,9 @@ ul {
     padding: 0px;
     margin: 0px;
 }
+
+*/
+////////
 #deconnexion
 {
     margin-left: 30px;
