--- a/src/app/client/nouvelle-demande/nouvelle-demande.component.html
+++ b/src/app/client/nouvelle-demande/nouvelle-demande.component.html
@@ -44,16 +44,16 @@
 		
 <!-- LIste Des employes a associer a la Demande 
     +++++++++++++++++++++DEBUT++++++++++++++++++-->
-<div class="container" id="listeEmployes">
-  <div class="row">
-	<section class="content ">
-	  <div class="table-container panel-body panel panel-default col-md-8">
+<div class="container col-md-12 col-sm-12" id="listeEmployes">
+  <div class="row col-md-12 col-sm-12">
+	<section class="content col-md-12 col-sm-12 ">
+	  <div class="table-container panel-body panel panel-default col-md-12 col-sm-12">
 		<table class="table table-filter">
 		  <tbody>
 			<tr data-status="pagado" *ngFor="let employe of listeEmployes ;let position=index;" id="{{position}}">
 			  <td>
 				<div class="ckbox">
-					<input type="checkbox" id="inlineCkeckbox{{position}}" (change)="getselectedEmployesvalues(employe,position)">
+					<input type="checkbox" id="inlineCkeckbox{{position}}" (change)="getselectedEmployesvalues(employe,position,$event)">
 						<label for="inlineCkeckbox{{position}}"></label>
 				</div>
 			  </td>
