--- a/src/app/client/acceuil-client/acceuil-client.component.html
+++ b/src/app/client/acceuil-client/acceuil-client.component.html
@@ -1,5 +1,4 @@
 <div class="container" *ngIf="vpage">
-  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
   <div class="mail-box">            
      <aside class="sm-side">
         <div class="user-head">
@@ -11,63 +10,48 @@
             <h5><a >{{clientConnecte.prenom}}</a></h5>
             <span><a >{{clientConnecte.nom}}</a></span>
           </div>
-          <a class="mail-dropdown pull-right" href="javascript:;">
-              <i class="fa fa-chevron-down"></i>
-          </a>
         </div>
         <div class="inbox-body">
-           <a href="#myModal" data-toggle="modal"  title="Compose"    class="btn btn-compose">Compose</a>            
+           <a data-toggle="modal"  title="Compose"    class="btn btn-compose">Sen-Menagere</a>            
         </div>
         <ul class="inbox-nav inbox-divider">
           <li >
-            <a (click)="visibiliteProfile()"><i class="fa fa-bookmark-o"></i> Mon Profil</a>
+            <a (click)="visibiliteProfile()"><i class="glyphicon glyphicon-home"></i> Mon Profil</a>
           </li>
           <li>
-            <a (click)="visibiliteDemandes()"><i class="fa fa-inbox"></i>Nouvelle Demandes</a>
+            <a (click)="visibiliteDemandes()"><i class="glyphicon glyphicon-folder-open"></i>Nouvelle Demandes</a>
           </li>
           <li>
-            <a (click)="visibiliteDemandesClient()"><i class=" fa fa-trash-o"></i> Mes demandes</a>
+            <a (click)="visibiliteDemandesClient()"><i class="glyphicon glyphicon-folder-open"></i> Mes demandes</a>
           </li>
           <li>
-             <a (click)="visibiliteEmploye()"><i class="fa fa-external-link"></i>Employes</a>
+            <a (click)="visibiliteContrats()"><i class="glyphicon glyphicon-file"></i>Mes Contrats</a>
           </li>
           <li>
-            <a (click)="visibiliteMessages()"><i class=" fa fa-envelope-o "></i>Messages <span class="label label-info pull-right">30</span></a>
+             <a (click)="visibiliteEmploye()"><i class="glyphicon glyphicon-user"></i>Employes</a>
           </li>
         </ul>
-        <div class="inbox-body text-center">
-          <div class="btn-group">
-            <a class="btn mini btn-primary" href="javascript:;">
-              <i class="fa fa-plus"></i>
-            </a>
-          </div>
-          <div class="btn-group">
-            <a class="btn mini btn-success" href="javascript:;">
-               <i class="fa fa-phone"></i>
-            </a>
-          </div>
-          <div class="btn-group">
-            <a class="btn mini btn-info" href="javascript:;">
-               <i class="fa fa-cog"></i>
-            </a>
-          </div>
-       </div>
+
       </aside>
        <!-- fin aside -->
       <aside class="lg-side">
         <div class="inbox-head">
-          <h3>Inbox</h3>
+          <h3>Sen-Menagere</h3>
           <div action="#" class="pull-right position">
-             <div class="input-append">
+             <div class="input-append col-dm-12">
+               <div class="col-md-7">
                 <input [(ngModel)]="recherche" type="text" class="sr-input" placeholder="Recherche" (click)="faireRecherche()" (change)="touchRecherche()">
-                <button class="btn sr-btn" type="button"><i class="fa fa-search"></i></button>
-                <button class="btn sr-btn" id="deconnexion" (click)="deconnexion()"><span class="	glyphicon glyphicon-off"></span>  Deconnexion</button>
+                <button class="btn sr-btn" type="button"><i class="glyphicon glyphicon-search"></i></button>
+               </div>
+               <div class="col-md-2">
+                <button class="btn sr-btn" id="deconnexion" (click)="deconnexion()"><span class="glyphicon glyphicon-off"></span>  Deconnexion</button>
+              </div>
               </div>
             </div>
         </div>
         <!--Profil du Client -->
         <div class="inbox-body" *ngIf="vDefaut" >
-            <p>Page par Defaut</p>
+          <app-page-defaut></app-page-defaut>
         </div>
         <!-- LIste Des Employes par recherhe 
            +++++++++++++++++++++DEBUT++++++++++++++++++-->
@@ -79,12 +63,6 @@
 	              	<table class="table table-filter">
 		                <tbody>
 		                	<tr data-status="pagado" *ngFor="let employe of listeEmployes ;let position=index;">
-			                  <!-- <td>
-			                  	<div class="ckbox">
-				                   	<input type="checkbox" id="inlineCkeckbox{{position}}" (change)="getselectedEmployesvalues(employe)">
-					                	<label for="inlineCkeckbox{{position}}"></label>
-			                  	</div>
-			                  </td> -->
 			                  <td>
 			                   	<a href="javascript:;" class="star">
 				                    <i class="glyphicon glyphicon-star"></i>
@@ -187,9 +165,9 @@
         <div class="inbox-body" *ngIf="vEmploye" >
           <app-liste-employes></app-liste-employes>
         </div>
-        <!--Messages du Client -->
+        <!--Contrats du Client -->
         <div class="inbox-body" *ngIf="vMessages" >
-            <app-message-client></app-message-client>
+            <app-contrat-client></app-contrat-client>
         </div>
         <!--Liste des Demande du Client -->
         <div class="inbox-body" *ngIf="vDemandesClient" >
