--- a/src/app/client/liste-employes/liste-employes.component.html
+++ b/src/app/client/liste-employes/liste-employes.component.html
@@ -1,9 +1,9 @@
 <!-- LIste Des employes a associer a la Demande 
     +++++++++++++++++++++DEBUT++++++++++++++++++-->
-    <div class="container" id="listeEmployes">
-        <div class="row">
-        <section class="content">
-          <div class="table-container panel-body panel panel-default col-md-8">
+    <div class="container col-md-12 col-sm-12" id="listeEmployes">
+        <div class="row col-md-12 col-sm-12">
+        <section class="content col-md-12 col-sm-12">
+          <div class="table-container panel-body panel panel-default col-md-12 col-sm-12">
           <table class="table table-filter">
             <tbody>
             <tr data-status="pagado" *ngFor="let employe of listeEmployes ;let position=index;">
