--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -4,9 +4,10 @@
    background-color: rgb(255, 255, 255);
     padding-left: 250px;
     vertical-align: center;
+    height: 300px;
 }
 div#slider { 
-   width: 1000px; max-width: 1000px; height: 350px; text-align: right; overflow: hidden; }
+   width: 1000px; max-width: 1000px; height: 850px; text-align: right; overflow: hidden; }
 div#slider figure {
     position: relative; 
     width: 700%;
