--- a/src/app/conctact/conctact.component.scss
+++ b/src/app/conctact/conctact.component.scss
@@ -1,7 +1,8 @@
-.big-img img {
+.big-img  {
     height: 380px;
-    width:100%;
+    width:150%;
     object-fit: cover;
+    margin-top: 90px;
 }
 span.bg-main {
     color: #008ba3;
