--- a/src/app/contact1/contact1.component.html
+++ b/src/app/contact1/contact1.component.html
@@ -1,21 +1,23 @@
-<app-nav1 id="nav"></app-nav1>
-<app-carousel></app-carousel>
-<header id="contacter" class="masthead text-white ">
+<div>
+    <app-nav1></app-nav1>
+
+</div>
+
+<header class="masthead text-white ">
         <div class="overlay"></div>
         <div class="container slider-top-text">
             <div class="row">
-                <div  class="contact col-md-12 text-center">
-                    <a id="contacternous" class="btn btn-primary btn-join" [routerLink]="['/contacter']" routerLinkActive="active" ><h4>Contacter Nous<span class="glyphicon glyphicon-chevron-right
-                      "></span></h4></a>
+                <div  class="col-md-12 text-center">
+                    <br><br>
+                    <h3 id="text1" class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Ménagère</span></h3>
+                    <h4 class="myp-slider text-center">Nous vous proposons des Services de qualités</h4>
+                    <h4 class="myp text-center">Services Entreprises    |   Service Ménagères    |   Service d'Organisations </h4>
                 </div>
-                <div  class="bouton col-md-12 text-center mt-5">
-                        <div class="scroll-down">
-                            <a class="btn btn-default btn-scroll floating-arrow" href="#gobottom" id="bottom"><i class="fa fa-angle-down"></i></a>
-                        </div>
-                    </div>
+                
             </div>
         </div>
     </header>
+<app-carousel></app-carousel>
 
 <!-- espace Section1 -->   
 <section class="testimonials" id="gobottom">
@@ -36,12 +38,11 @@
                      <div class="contact"  >
                         <div class="row test">
                           <div class="text col-md-6">
-                            <h3><span class="bg-main"><b>Contacter votre Agence </b></span></h3>
-                            <h5><span class="bg-main">Merci de laisser une note.</span></h5>
-                            <h4><span class="glyphicon glyphicon-map-marker"></span>Dakar, Medina</h4>
-                            <h4><span class="glyphicon glyphicon-phone"></span>Phone: +221 77 334 42 54</h4>
-                            <h4><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</h4>
-                           
+                            <h3><span class="bg-main"><b> Contacter votre Agence </b></span></h3>
+                            <h5><span class="bg-main"> Merci de laisser une note.</span></h5>
+                            <h4><span class="glyphicon glyphicon-map-marker"></span> Dakar, Medina</h4>
+                            <h4><span class="glyphicon glyphicon-phone"></span> Phone: +221 77 334 42 54</h4>
+                            <h4><span class="glyphicon glyphicon-envelope"></span> Email: mail@mail.com</h4>
                           </div>
                           <form [formGroup]="contactForm" (ngSubmit)="envoyerEmail()">
                           <div class="col-md-12 bg-dark">
