--- a/src/app/head-client/head-client.component.scss
+++ b/src/app/head-client/head-client.component.scss
@@ -14,9 +14,9 @@ body {
 
 header.masthead {
     position: relative;
-    height: 50vh;
+    height: 40vh;
    // background-color: #343a40; bacground 
-    background: url('/../assets/SET1/fmcui.jpg') no-repeat center center;
+    background: url('/../assets/SET1/client.jpg') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
