--- a/src/app/Adm/ref-competence/ref-competence.component.html
+++ b/src/app/Adm/ref-competence/ref-competence.component.html
@@ -1,6 +1,6 @@
-<div class="container bootstrap snippet">
-    <div class="row" >
-        <div class="col-md-8 " *ngIf="!vajout">
+<div class=col-md>
+    <div class="row col-md-12" >
+        <div class="col-md-9 " *ngIf="!vajout">
         <h5>Nouvelle Competence</h5>
         <form [formGroup]="compForm" (ngSubmit)="validercompetence()" >
             <div class="form-group col-md-5">
@@ -16,7 +16,7 @@
 
         </div>
       
-        <div class="col-md-8 " *ngIf="vEdite">
+        <div class="col-md-9 " *ngIf="vEdite">
                 <h5>Editer Competence</h5>
                 <form [formGroup]="compForm" (ngSubmit)="validercompetence()" >
                     <div class="form-group col-md-5">
@@ -35,7 +35,7 @@
 </div>
     <!-- fin -->
 
- <div class="col-md-6">
+ <div class="col-md-12">
 <div class="panel panel-primary" *ngIf="listerCompetence">
     <div class="panel-heading"><span class="glyphicon glyphicon-list"> Mes Competences</span></div>
   <table class="table table-striped">
