--- a/src/app/Adm/ref-pays/ref-pays.component.html
+++ b/src/app/Adm/ref-pays/ref-pays.component.html
@@ -1,31 +1,29 @@
-<div class="container bootstrap snippet">
-    <div class="row" >
-        <div class="col-md-8 " *ngIf="!vajout">
-        <h5>Nouvelle Ethnie</h5>
+<div class=col-md>
+    <div class="row col-md-12" >
+        <div class="col-md-12 " *ngIf="!vajout">
+        <h5>Nouveau Pays</h5>
         <form [formGroup]="compForm" (ngSubmit)="validerPays()" >
-            <div class="form-group col-md-5">
+            <div class="form-group col-md-4">
                 <input type="text" class="form-control activation" id="nom" placeholder="nom Ethnie " formControlName="nom"   > 
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-success" ><i class="glyphicon glyphicon-plus-sign"></i></button>
-
             </div>
-
+            <div class="form-group">
+                <button  id="idbtn" type="button" (click)="visibiliteLister()" class="btn btn-primary" ><i class="glyphicon glyphicon-list"></i></button>
+            </div>
            </form>
-            <button id="idbtn" (click)="visibiliteLister()" class="btn btn-primary" ><i class="glyphicon glyphicon-list"></i></button>
-
         </div>
       
-        <div class="col-md-8 " *ngIf="vEdite">
-                <h5>Editer Ethnie</h5>
+        <div class="col-md-9 " *ngIf="vEdite">
+                <h5>Editer Pays</h5>
                 <form [formGroup]="compForm" (ngSubmit)="validerPays()" >
                     <div class="form-group col-md-5">
                         <input type="text" class="form-control activation" [value]="paysEdite.nom" [(ngModel)]="paysEdite.nom" id="nom" placeholder="nom " formControlName="nom"   > 
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success" ><i class="glyphicon glyphicon-pencil"></i></button>
-                        <button (click)="visibiliteLister()" class="btn btn-primary" ><i class="glyphicon glyphicon-list"></i></button>
-        
+                        <button style="margin-left: 20px;" (click)="visibiliteLister()" class="btn btn-primary" ><i class="glyphicon glyphicon-list"></i></button>
                     </div>
         
                    </form>
@@ -35,7 +33,7 @@
 </div>
     <!-- fin -->
 
- <div class="col-md-6">
+ <div class="col-md-12">
 <div class="panel panel-primary" *ngIf="listerCompetence">
     <div class="panel-heading"><span class="glyphicon glyphicon-list"> Mes Pays</span></div>
   <table class="table table-striped">
@@ -66,3 +64,11 @@
   
   <div>
 </div>
+
+
+
+
+
+
+
+
