--- a/src/app/Adm/ref-type-iden/ref-type-iden.component.html
+++ b/src/app/Adm/ref-type-iden/ref-type-iden.component.html
@@ -1,3 +1,68 @@
-<p>
-  ref-type-iden works!
-</p>
+<div class=col-md>
+    <div class="row col-md-12" >
+        <div class="col-md-9 " *ngIf="!vajout">
+        <h5>Nouveau TypeIdentification</h5>
+        <form [formGroup]="compForm" (ngSubmit)="validerEthnies()" >
+            <div class="form-group col-md-5">
+                <input type="text" class="form-control activation" id="nom" placeholder="nom Ethnie " formControlName="nom"   > 
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-success" ><i class="glyphicon glyphicon-plus-sign"></i></button>
+
+            </div>
+
+           </form>
+            <button id="idbtn" (click)="visibiliteLister()" class="btn btn-primary" ><i class="glyphicon glyphicon-list"></i></button>
+
+        </div>
+      
+        <div class="col-md-9" *ngIf="vEdite">
+                <h5>Editer TypeIdentification</h5>
+                <form [formGroup]="compForm" (ngSubmit)="validerEthnies()" >
+                    <div class="form-group col-md-5">
+                        <input type="text" class="form-control activation" [value]="ethnieEdite.nom" [(ngModel)]="ethnieEdite.nom" id="nom" placeholder="nom " formControlName="nom"   > 
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success" ><i class="glyphicon glyphicon-pencil"></i></button>
+                        <button (click)="visibiliteLister()" class="btn btn-primary" ><i class="glyphicon glyphicon-list"></i></button>
+        
+                    </div>
+        
+                   </form>
+                </div>
+
+    </div>
+</div>
+    <!-- fin -->
+
+ <div class="col-md-12">
+<div class="panel panel-primary" *ngIf="listerCompetence">
+    <div class="panel-heading"><span class="glyphicon glyphicon-list"> Mes TypeIdentificatons</span></div>
+  <table class="table table-striped">
+    <thead class="thead-dark">
+    <th>Description</th>
+    <th>Supprimmer</th>
+    <th>editer</th>
+
+  </thead>
+  <tbody >
+    <tr *ngFor="let comp of listeEthnie " class="table-info">
+      <td>{{comp.nom}}</td>
+      <td><button (click)="deleteEthnie(comp)" class="btn btn-danger" ><i class="glyphicon glyphicon-trash"></i></button>
+        <td><button (click)="editeEthnie(comp)" class="btn btn-primary" ><i class="glyphicon glyphicon-pencil"></i></button>
+        
+      </td>
+    </tr>
+  </tbody>
+  </table>
+  <div class="container">
+        <ul class="pagination">
+          <li *ngIf="vprecedant" (click)="precedant()"><a class="glyphicon glyphicon-menu-left"></a></li>
+          <li *ngIf="vsuivant" (click)="suivant()"><a class="glyphicon glyphicon-menu-right"></a></li>
+
+        </ul>
+      </div>
+  </div>
+  
+  <div>
+</div>
