--- a/src/app/head-client/head-client.component.html
+++ b/src/app/head-client/head-client.component.html
@@ -4,8 +4,9 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3 class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Managere</span></h3>
-                <H4 class="myp-slider text-center">Faites confiance à l’une de nos équipes dynamiques, professionnelles et pleines d’énergie!
-                </H4>
+                <br>
+                <p class="myp-slider text-center">Faites confiance à l’une de nos équipes dynamiques, professionnelles et pleines d’énergie!
+                </p>
                 <p class="myp text-center">Services Entreprise    |   Service Domicile    |   Service Organisation </p>
                 <a class="btn btn-primary btn-join" [routerLink]="['/contacter']" routerLinkActive="active" ><h4>Contacter Nous<span class="glyphicon glyphicon-chevron-right
                   "></span></h4></a>
