--- a/src/app/nav1/nav1.component.html
+++ b/src/app/nav1/nav1.component.html
@@ -1,23 +1,18 @@
-  <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
+
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
           <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>                        
-              </button>
-              <a class="navbar-brand" ><h5>SeneMenagère</h5></a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-              <ul class="nav navbar-nav">
-                <li class="active"><a [routerLink]="['/']" routerLinkActive="router-link-active" ><h5>Acceuil</h5></a></li>
-                <li><a [routerLink]="['/contacter']" routerLinkActive="router-link-active" ><h5>Contact</h5></a></li>
-               
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                  <li><a  [routerLink]="['/EspaceClient']" routerLinkActive="router-link-active" ><h5>S'inscrire</h5></a></li>
-                <li><a [routerLink]="['/login']" routerLinkActive="router-link-active" ><h5><span class="glyphicon glyphicon-log-in"></span> Connexion</h5></a></li>
-              </ul>
-            </div>
-      </div>
-    </nav>
+            <a class="active navbar-brand "> SeneMenegere</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li ><a class="active" [routerLink]="['/']" routerLinkActive="router-link-active" > Acceuil</a></li>
+            <li><a [routerLink]="['/contacter']" routerLinkActive="router-link-active" > Contact</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a class="smothscroll" [routerLink]="['/EspaceClient']" routerLinkActive="router-link-active"><span class="glyphicon glyphicon-edit"></span>S'inscrire</a></li>
+            <li><a class="smothscroll" [routerLink]="['/login']" routerLinkActive="router-link-active" ><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+          </ul>
+        </div>
+      </nav>
+
+
