--- a/src/app/employee/inscription/inscription.component.html
+++ b/src/app/employee/inscription/inscription.component.html
@@ -268,16 +268,15 @@
                              <div class="col-md">
                                 
                               <div class="radio" >
-                                <label><input type="radio" name="horaire" id="radios-0" value="Weekend"  formControlName="horaire">Weekend</label>
+                                <label><input type="radio" name="horaire" id="radios-0" value="Weekend" value="Weekend"  formControlName="horaire">Weekend</label>
                               </div>
                               <div class="radio">
-                                <label><input type="radio" name="horaire" id="radios-1" formControlName="horaire" value="Semaine">Semaine</label>
+                                <label><input type="radio" name="horaire" id="radios-1" value="Semaine" formControlName="horaire" value="Semaine">Semaine</label>
                               </div>
                               <div class="radio">
-                                  <label><input type="radio" name="horaire" id="radios-2" formControlName="horaire" value="Quinzaine">Quinzaine</label>
+                                  <label><input type="radio" name="horaire" id="radios-2" value="Quinzaine" formControlName="horaire" value="Quinzaine">Quinzaine</label>
                                 </div>
                              </div>
-   
                         </div>
                      </div><!-- well dash -->
                  </div><!-- md-4 -->
