--- a/src/app/Adm/pageweb/pageweb.component.html
+++ b/src/app/Adm/pageweb/pageweb.component.html
@@ -1,14 +1,48 @@
 
+<div>
+    <app-nav1></app-nav1>
+
+</div>
+
+<header class="masthead text-white ">
+        <div class="overlay"></div>
+        <div class="container slider-top-text">
+            <div class="row">
+                <div  class="col-md-12 text-center">
+                    <br><br>
+                    <h3 id="text1" class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Ménagère</span></h3>
+                    <h4 class="myp-slider text-center">Nous vous proposons des Services de qualités</h4>
+                    <h4 class="myp text-center">Services Entreprises    |   Service Ménagères    |   Service d'Organisations </h4>
+                </div>
+                
+            </div>
+        </div>
+    </header>
+<app-carousel></app-carousel>
+<header id="contacter" class="masthead text-white ">
+        <div class="overlay"></div>
+        <div class="container slider-top-text">
+            <div class="row">
+                <div  class="col-md-12 text-center">
+                    <a id="contacternous" class="btn btn-primary btn-join" [routerLink]="['/contacter']" routerLinkActive="active" ><h4>Contacter Nous<span class="glyphicon glyphicon-chevron-right
+                      "></span></h4></a>
+                </div>
+                <div  class="col-md-12 text-center mt-5">
+                        <div class="scroll-down">
+                            <a class="btn btn-default btn-scroll floating-arrow" href="#gobottom" id="bottom"><i class="fa fa-angle-down"></i></a>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </header>
+
+
 
 <div class="container-fluid text-center">    
   <div class="row content">
     
     <div class="col-sm-11  text-left"> 
-      <h1>Welcome</h1>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <hr>
-      <h3>Nos Services  <span class="bg-main"> professionnelle.</span></h3>
+      <h3 style="margin-left: 30px; ">Nos Services  <span class="bg-main"> professionnelle.</span></h3>
         <!--==========================
       Services Section
     ============================-->
@@ -16,7 +50,6 @@
         <div class="container">
   
           <div class="row">
-  
             <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
               <div class="box">
                 <div><img class="card-img-top" src="../assets/SET/G1.jpg" style="height:200px; width: 370px; ">
@@ -32,40 +65,43 @@
                 <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa</p>
               </div>
             </div>
-  
-            <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-              <div class="box">
-                  <div><img class="card-img-top" src="../assets/SET1/RP.jpg" style="height:200px; width: 370px;"></div>
-                <h4 class="title"><a href="">Repassage</a></h4>
-                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-              <div class="box">
-                  <div><img class="card-img-top" src="../assets/SET/C1.jpg" style="height:200px; width: 370px;"></div>
-                 <h4 class="title"><a href="">Cuisiniere</a></h4>
-                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-              </div>
-            </div>
-  
-            <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-              <div class="box">
-                  <div><img class="card-img-top" src="../assets/SET1/im2.jpg" style="height:200px; width: 370px;"></div>               
-                   <h4 class="title"><a href="">Soutien scolaire</a></h4>
-                <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-              <div class="box">
-                  <div><img class="card-img-top" src="../assets/SET1/ww.jpeg" style="height:200px; width: 370px;"></div>                
-                  <h4 class="title"><a href="">Babysitting</a></h4>
-                <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-              </div>
-            </div>
-  
           </div>
-  
-        </div>
+          <!-- 2eme vague -->
+          <div class="row">
+              <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+                  <div class="box">
+                      <div><img class="card-img-top" src="../assets/SET/C1.jpg" style="height:200px; width: 370px;"></div>
+                     <h4 class="title"><a href="">Cuisiniere</a></h4>
+                    <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                    <div class="box">
+                        <div><img class="card-img-top" src="../assets/SET1/im2.jpg" style="height:200px; width: 370px;"></div>               
+                         <h4 class="title"><a href="">Soutien scolaire</a></h4>
+                      <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+                    </div>
+                  </div>
+            </div>
+
+            <!-- 3eme vagues -->
+            <div class="row">
+                <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+                    <div class="box">
+                        <div><img class="card-img-top" src="../assets/SET1/RP.jpg" style="height:200px; width: 370px;"></div>
+                      <h4 class="title"><a href="">Repassage</a></h4>
+                      <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+                    </div>
+               </div>
+               <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                  <div class="box">
+                      <div><img class="card-img-top" src="../assets/SET1/ww.jpeg" style="height:200px; width: 370px;"></div>                
+                      <h4 class="title"><a href="">Babysitting</a></h4>
+                    <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+                  </div>
+                </div>  
+           </div><!-- 3eme fin -->
+        </div><!-- container -->
       </section><!-- #services -->
       
     </div>
@@ -135,4 +171,3 @@
     </div>
   </div>
 </footer><!-- #footer -->
-
