--- a/src/app/Adm/pageweb/pageweb.component.scss
+++ b/src/app/Adm/pageweb/pageweb.component.scss
@@ -1,11 +1,69 @@
     /* Remove the navbar's default rounded borders and increase the bottom margin */ 
     .container-fluid {
-      margin-left:17%;
+      margin-left:15%;
     }
     span.bg-main {
         color: #008ba3;
     }
-    
+    /* header*/
+
+    /* Remove the jumbotron's default bottom margin */ 
+.jumbotron {
+  margin-bottom: 0;
+  background-color: rgb(255, 255, 255);
+
+
+}
+////////@at-root
+header.masthead {
+  position: relative;
+ // height: 50vh;
+  //margin-top: -300px;
+  z-index: 1;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding-top: 0px;
+ // margin-top: 0px;
+  padding-bottom: 0px;
+}
+
+header.masthead .overlay{
+  position:absolute;
+ // background-color: brown;
+  //height:100%;
+ // width:100%;
+  top:0;
+  left:0;
+  opacity:0.8}
+  
+
+span.bg-main {
+  color: #008ba3;
+}
+
+#text1
+{
+  color: blue;
+}
+#contacter{
+  margin-top: -200px;
+  z-index: 1;
+ vertical-align: center;
+ margin-bottom: 70px;
+
+}
+#nav1{
+  border-top-width: 0px;
+  margin-bottom: 0;
+
+}
+#test1{
+  margin-left: 280px;
+
+}
+
     
 /*--------------------------------------------------------------
 # Footer
@@ -172,6 +230,8 @@
 
 #services {
     padding: 60px 0 40px 0;
+    margin-top: 5px;
+    margin-bottom: 3px;
    // box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   }
   
