--- a/src/app/Adm/ref-lang/ref-lang.component.scss
+++ b/src/app/Adm/ref-lang/ref-lang.component.scss
@@ -6,7 +6,7 @@
 .navbar-nav > li > a, .navbar-band{
   padding-top: 6px !important;
   padding-bottom: 0 !important;
-  height: 15px;
+  height: 20px;
 
 }
 .navbar-default .navbar-toggle{
@@ -28,14 +28,14 @@
   color: #ecf0f1;
 }
 .navbar-default .navbar-link:hover {
-  color: #ecf0f1;
+  color: #ffffff;
 }
 .sect{
   margin-top: 40px;
 }
 #header{
-  background: #333333;
-  color: #ffffff;
+  background: #f5f1f1;
+  color: #0a0909;
   padding-bottom: 10px;
   margin-bottom: 15px;
 }
